update config files

--- a/package.json
+++ b/package.json
@@ -1,16 +1,27 @@
 {
   "name": "design-patterns",
   "version": "1.0.0",
-  "description": "",
+  "description": "design patterns implemented in typescript",
   "main": "index.js",
+  "author": "rohit kumar",
+  "contributors": [],
   "scripts": {
     "start": "ts-node index.ts"
   },
-  "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.0.0",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
+  },
+  "repository": "kumarnwb/design-pattern",
+  "keywords": [
+    "typescript",
+    "design patterns",
+    "javascript",
+    "nodejs"
+  ],
+  "engines": {
+    "node": ">=10.x.x"
   }
 }
